        Calum Mackay for reporting this bug)
   - Feature: Applet and Popup now can be set to be sticky and be kept above all
        other windows
   - Bugfixes: Better error handling and bad connection handling (IMAP4;
        thanks to Byron Foster for providing a patch)
   - Bugfix: Corrected tests for responses to IDLE and SEARCH NOT SEEN
        commands (IMAP4)

Version 2.1.0
 * Nicolas Rougier
   - New & simpler interface
   - Support of the IDLE state for imap4 (no more polling)
   - Support of the FAM (File Alteration Monitor)
     (no more polling for file/folder protocols)
   - Better detection of mailbox format
   - Bugfix: IMAP4 idle state test to avoid checking twice
   - Bugfix: Popup was shown on exiting preferences
   - Put back credits
   - Updated French translations
   - Fix a bug with IMAP4 idle feature (not recognizing the BYE command)
   - Added a TODO file to keep track of features/bugs to be implemented/fixed
   - Bugfix: Testing of "\"text\" \"plain\"" in imap4 parsing was wrong
             (some servers answer using upper cases letter)
   - Modified credits apperance in the preferences panel (and remove the
     about menu from gnome applet popup menu)
   - Bugfix: socket was closed twice when lock was lost in IDLE state
   - Bugfix: modify the configure script to have errors if popt or fam
             libraries not present
   - Sorted the contributors list
   - Feature: When adding a mailbox and if one is selected, the new mailbox is
	      copied from the selected one
   - Feature: If password is empty, gnubiff try to find by looking at
              other mailboxes and matching (address/username)
   - Updated THANKS file
   - Bugfix: display last received mail for each mailbox (up to	popup_size)
   - Bugfix: Take popup_use_size_ into account
   - Bugfix: Use of the decoded charset for imap4
   - Bugfix: Added a lock for the ui-authentification/ui-certificate access 