@@ -36,6 +36,7 @@ Version 2.1.1
         thanks to Byron Foster for providing a patch)
    - Bugfix: Corrected tests for responses to IDLE and SEARCH NOT SEEN
         commands (IMAP4)
+   - Cleanup of SEARCH NOT SEEN command (IMAP4)
 
 Version 2.1.0
  * Nicolas Rougier
